# libtypec-rs

./: Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
c_examples/: Cargo.toml  README.md  build.rs  lstypec.c  lstypec.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: backends.rs  lib.rs  pd.rs  typec.rs  ucsi.rs  vdo.rs
src/backends/: sysfs.rs  ucsi_debugfs.rs
src/pd/: pd3p2.rs
src/pd/pd3p2/: vdo.rs
